# curso-machine-lerning

./: .gitignore  pyproject.toml
notebooks/: T1.1_data_cleaning_carga_de_datos.ipynb  T1.2_data_cleaning_analisis_preliminar_datos.ipynb  T1.3_data_cleaning_visualizacion.ipynb  T1.4_data_cleaning_DataWrangling.ipynb  T1.5_Data Cleaning_Agrupación.ipynb  T5.58_Concatenar_Datasets.ipynb  T5.59_CargaMasivaDatos.ipynb  T5.60- Ejercicio Juegos Olimpicos.ipynb  T6.73_AspectosTeoricos.ipynb  T7.75. Linear Regresion.ipynb  T7.76. Multiple Linear Regresion.ipynb
